# retro-p4-touch

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  fatfs_exfat_override.h  idf_component.yml  main.c  rg_system.h  sdl_stub.c  sdl_stub.h
main/patches/: retro-go-gbsp-memory.patch
main/tools/: generate_pokemon_zlib.py
